test/expected/explain_c16-c99.out
explain char16_t x
        ^
9: error: "char16_t": unsupported type until C11; did you mean "wchar_t"?
